@@ -1,6 +1,8 @@
 v3.4.0-rc.4 (2018-11-04)
 ------------------------
 
+* fixed Foxx queues not retrying jobs with infinite `maxFailures`
+
 * increase AQL query string parsing performance for queries with many (100K+) string
   values contained in the query string
 
